--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <a href="javasccript:void(0)" role="button" class="" data-toggle="dropdown">
                                 <img src="assets/images/notification.svg" class="ml-3 img-fluid nav_notification_img" alt="navbar_home" />
                             </a>
-                            <div class="col-4 dropdown-menu bg_lightgrey-s border-0 shadow br_15px-s min_w_315px-s ml-xl-5">
+                            <div class="col-4 dropdown-menu border-0 shadow br_15px-s min_w_315px-s ml-xl-5">
                                 <h4 class="ml-5 mt-3 mb-5">
                                     <strong class="fg_green-s">Notification</strong>
                                 </h4>
@@ -86,7 +86,7 @@
                                 <h5 class="ml-5">
                                     <strong>Today</strong>
                                 </h5>
-                                <a class="dropdown-item bg-white py-4" href="#">
+                                <a class="dropdown-item bg_lightgrey-s py-4" href="#">
                                     <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
                                         <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
                                         <strong class="fg_green-s ml-2">Themer</strong> <span> invite you to join the game.</span>
@@ -96,7 +96,7 @@
 
                                 <hr class="goalkeeper_margin_b mx-1 mt-0 mb-0" />
 
-                                <a class="dropdown-item bg-white py-4" href="#">
+                                <a class="dropdown-item bg_lightgrey-s py-4" href="#">
                                     <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
                                         <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
                                         <strong class="fg_green-s ml-2">Themer</strong> <span> accepted your invitation.</span>
@@ -868,37 +868,37 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="row mx-auto text-dark ">
-                                                <div class="col-3   fs_12px-s">
-                                                    <span class="opacity_4-s fs_9px-s">Age(years)</span>
+                                            <div class="row mx-md-auto ml-3 text-dark ">
+                                                <div class="col-3 px-md-3 px-1 fs_10px-s">
+                                                    <span class="opacity_4-s fs_8px-s">Age(years)</span>
                                                     <br>
-                                                    <span class="fs_11px-s"><strong>28</strong></span>
+                                                    <span class="fs_10px-s"><strong>28</strong></span>
                                                 </div>
-                                                <div class="col-3   fs_12px-s">
+                                                <div class="col-3 px-md-3 px-1 fs_10px-s">
                                                     <span class="opacity_4-s">Matches</span>
                                                     <br>
-                                                    <span class="fs_11px-s"><strong>15</strong></span>
+                                                    <span class="fs_10px-s"><strong>15</strong></span>
                                                 </div>
-                                                <div class="col-3   fs_12px-s">
+                                                <div class="col-3 px-md-3 px-1 fs_10px-s">
                                                     <span class="opacity_4-s">Missed</span>
                                                     <br>
-                                                    <span class="fs_11px-s"><strong>2</strong></span>
+                                                    <span class="fs_10px-s"><strong>2</strong></span>
                                                 </div>
-                                                <div class="col-3   fs_12px-s">
+                                                <div class="col-3 px-md-3 px-1 fs_10px-s">
                                                     <span class="opacity_4-s">Missed</span>
                                                     <br>
-                                                    <span class="fs_11px-s"><strong>Defender</strong></span>
+                                                    <span class="fs_10px-s"><strong>Defender</strong></span>
                                                 </div>
                                             </div>
                                             <hr class="goalkeeper_margin_b mx-3 my-2" />
 
-                                            <div class="row mx-auto aditya_location">
+                                            <div class="row mx-md-auto mx-1 aditya_location">
                                                 <div class="col-6">
                                                     <p class="fs_11px-s mb-0 text-dark">
                                                         <strong><i class=" fa fa-map-marker text-dark fs_11px-s" aria-hidden="true"></i> Aditya</strong>
                                                     </p>
                                                 </div>
-                                                <div class="col-6">
+                                                <div class="col-6 px-md-3 px-0">
                                                     <a class="td_none-s fs_11px-s" href="Home/home-sent-invitation.html">
                                                         <span class="pull-right text-dark  fs_11px-s"><strong>send invitation >></strong></span>
                                                     </a>
