--- a/user_profile.html
+++ b/user_profile.html
@@ -74,7 +74,7 @@
                             <a href="javasccript:void(0)" role="button" class="" data-toggle="dropdown">
                                 <img src="assets/images/notification.svg" class="ml-3 img-fluid nav_notification_img" alt="navbar_home" />
                             </a>
-                            <div class="col-4 dropdown-menu bg_lightgrey-s border-0 shadow br_15px-s min_w_315px-s ml-xl-5">
+                            <div class="col-4 dropdown-menu border-0 shadow br_15px-s min_w_315px-s ml-xl-5">
                                 <h4 class="ml-5 mt-3 mb-5">
                                     <strong class="fg_green-s">Notification</strong>
                                 </h4>
@@ -82,7 +82,7 @@
                                 <h5 class="ml-5">
                                     <strong>Today</strong>
                                 </h5>
-                                <a class="dropdown-item bg-white py-4" href="#">
+                                <a class="dropdown-item bg_lightgrey-s py-4" href="#">
                                     <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
                                         <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
                                         <strong class="fg_green-s ml-2">Themer</strong> <span> invite you to join the game.</span>
@@ -92,7 +92,7 @@
 
                                 <hr class="goalkeeper_margin_b mt-0 mb-0" />
 
-                                <a class="dropdown-item bg-white py-4" href="#">
+                                <a class="dropdown-item bg_lightgrey-s py-4" href="#">
                                     <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
                                         <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
                                         <strong class="fg_green-s ml-2">Themer</strong> <span> accepted your invitation.</span>
@@ -247,7 +247,7 @@
                         <div class="row home-img-blocks">
 
 
-                            <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 home-img-block" data-toggle="modal" data-target="#post_modal-d" data-toggle="modal" data-target="#post_modal-d">
+                            <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 home-img-block" data-toggle="modal" data-target="#post_modal-d">
                                 <img src="assets/images/Mask Group 8.svg" class="img-fluid" alt="" />
                                 <div class="hover">
                                     <p class="profile_text_on_img_hover-s fs_12px-s">Find out image sdxsj nijdijd ijixciij hjiojoij</p>
@@ -285,6 +285,7 @@
 
                                 </div>
                             </div>
+
                             <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 home-img-block" data-toggle="modal" data-target="#post_modal-d">
                                 <img src="assets/images/Mask Group 8.svg" class="img-fluid" alt="" />
                                 <div class="hover">
@@ -303,6 +304,7 @@
 
                                 </div>
                             </div>
+
                             <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 home-img-block" data-toggle="modal" data-target="#post_modal-d">
                                 <img src="assets/images/Mask Group 8.svg" class="img-fluid" alt="" />
                                 <div class="hover">
@@ -321,6 +323,7 @@
 
                                 </div>
                             </div>
+
                             <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 home-img-block" data-toggle="modal" data-target="#post_modal-d">
                                 <img src="assets/images/Mask Group 8.svg" class="img-fluid" alt="" />
                                 <div class="hover">
@@ -343,26 +346,106 @@
                     </div>
 
                     <div id="menu3" class="tab-pane fade">
-                        <div class="row">
-                            <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
+                        <div class="row home-img-blocks">
+                            <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 home-img-block" data-toggle="modal" data-target="#post_modal-d">
                                 <img src="assets/images/play-button.svg" width="50" class="position_video_play_icon-s" alt="">
                                 <img src="assets/images/Mask Group 8.svg" class="img-fluid" alt="" />
+                                <div class="hover">
+                                    <!-- <img src="assets/images/play-button.svg" width="50" class="position_video_play_icon-s" alt=""> -->
+                                    <p class="profile_text_on_img_hover-s fs_12px-s">Find out image sdxsj nijdijd ijixciij hjiojoij</p>
+                                    <div class="d-flex w-100 justify-content-between ">
+                                        <div>
+                                            <span class="text-white fs_12px-s"><img class="w_20px-s mx-1" src="assets/images/like.svg" alt=""> 34</span>
+                                            <span class="text-white fs_12px-s ml-2"><img class="w_20px-s mx-1" src="assets/images/comment.svg" alt=""> 34</span>
+                                        </div>
+                                        <div class="d-flex">
+                                            <span class="text-white fs_12px-s"><img class="w_11px-s mx-1" src="assets/images/share_icon.svg" alt=""></span>
+                                            <span class="text-white fs_12px-s ml-1"><img class="w_10px-s mx-1" src="assets/images/delete_white_icon.svg" alt=""></span>
+                                            <span class="text-white fs_12px-s ml-1"><img class="w_20px-s mx-1 text-white" src="assets/images/view_icon.svg" alt=""></span>
+                                        </div>
+                                    </div>
+
+                                </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
+
+                            <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 home-img-block" data-toggle="modal" data-target="#post_modal-d">
                                 <img src="assets/images/play-button.svg" width="50" class="position_video_play_icon-s" alt="">
                                 <img src="assets/images/Mask Group 8.svg" class="img-fluid" alt="" />
+                                <div class="hover">
+                                    <p class="profile_text_on_img_hover-s fs_12px-s">Find out image sdxsj nijdijd ijixciij hjiojoij</p>
+                                    <div class="d-flex w-100 justify-content-between ">
+                                        <div>
+                                            <span class="text-white fs_12px-s"><img class="w_20px-s mx-1" src="assets/images/like.svg" alt=""> 34</span>
+                                            <span class="text-white fs_12px-s ml-2"><img class="w_20px-s mx-1" src="assets/images/comment.svg" alt=""> 34</span>
+                                        </div>
+                                        <div class="d-flex">
+                                            <span class="text-white fs_12px-s"><img class="w_11px-s mx-1" src="assets/images/share_icon.svg" alt=""></span>
+                                            <span class="text-white fs_12px-s ml-1"><img class="w_10px-s mx-1" src="assets/images/delete_white_icon.svg" alt=""></span>
+                                            <span class="text-white fs_12px-s ml-1"><img class="w_20px-s mx-1 text-white" src="assets/images/view_icon.svg" alt=""></span>
+                                        </div>
+                                    </div>
+
+                                </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
+
+                            <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 home-img-block" data-toggle="modal" data-target="#post_modal-d">
                                 <img src="assets/images/play-button.svg" width="50" class="position_video_play_icon-s" alt="">
                                 <img src="assets/images/Mask Group 8.svg" class="img-fluid" alt="" />
+                                <div class="hover">
+                                    <p class="profile_text_on_img_hover-s fs_12px-s">Find out image sdxsj nijdijd ijixciij hjiojoij</p>
+                                    <div class="d-flex w-100 justify-content-between ">
+                                        <div>
+                                            <span class="text-white fs_12px-s"><img class="w_20px-s mx-1" src="assets/images/like.svg" alt=""> 34</span>
+                                            <span class="text-white fs_12px-s ml-2"><img class="w_20px-s mx-1" src="assets/images/comment.svg" alt=""> 34</span>
+                                        </div>
+                                        <div class="d-flex">
+                                            <span class="text-white fs_12px-s"><img class="w_11px-s mx-1" src="assets/images/share_icon.svg" alt=""></span>
+                                            <span class="text-white fs_12px-s ml-1"><img class="w_10px-s mx-1" src="assets/images/delete_white_icon.svg" alt=""></span>
+                                            <span class="text-white fs_12px-s ml-1"><img class="w_20px-s mx-1 text-white" src="assets/images/view_icon.svg" alt=""></span>
+                                        </div>
+                                    </div>
+
+                                </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
+
+                            <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 home-img-block" data-toggle="modal" data-target="#post_modal-d">
                                 <img src="assets/images/play-button.svg" width="50" class="position_video_play_icon-s" alt="">
                                 <img src="assets/images/Mask Group 8.svg" class="img-fluid" alt="" />
+                                <div class="hover">
+                                    <p class="profile_text_on_img_hover-s fs_12px-s">Find out image sdxsj nijdijd ijixciij hjiojoij</p>
+                                    <div class="d-flex w-100 justify-content-between ">
+                                        <div>
+                                            <span class="text-white fs_12px-s"><img class="w_20px-s mx-1" src="assets/images/like.svg" alt=""> 34</span>
+                                            <span class="text-white fs_12px-s ml-2"><img class="w_20px-s mx-1" src="assets/images/comment.svg" alt=""> 34</span>
+                                        </div>
+                                        <div class="d-flex">
+                                            <span class="text-white fs_12px-s"><img class="w_11px-s mx-1" src="assets/images/share_icon.svg" alt=""></span>
+                                            <span class="text-white fs_12px-s ml-1"><img class="w_10px-s mx-1" src="assets/images/delete_white_icon.svg" alt=""></span>
+                                            <span class="text-white fs_12px-s ml-1"><img class="w_20px-s mx-1 text-white" src="assets/images/view_icon.svg" alt=""></span>
+                                        </div>
+                                    </div>
+
+                                </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
+
+                            <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 home-img-block" data-toggle="modal" data-target="#post_modal-d">
                                 <img src="assets/images/play-button.svg" width="50" class="position_video_play_icon-s" alt="">
                                 <img src="assets/images/Mask Group 8.svg" class="img-fluid" alt="" />
+                                <div class="hover">
+                                    <p class="profile_text_on_img_hover-s fs_12px-s">Find out image sdxsj nijdijd ijixciij hjiojoij</p>
+                                    <div class="d-flex w-100 justify-content-between ">
+                                        <div>
+                                            <span class="text-white fs_12px-s"><img class="w_20px-s mx-1" src="assets/images/like.svg" alt=""> 34</span>
+                                            <span class="text-white fs_12px-s ml-2"><img class="w_20px-s mx-1" src="assets/images/comment.svg" alt=""> 34</span>
+                                        </div>
+                                        <div class="d-flex">
+                                            <span class="text-white fs_12px-s"><img class="w_11px-s mx-1" src="assets/images/share_icon.svg" alt=""></span>
+                                            <span class="text-white fs_12px-s ml-1"><img class="w_10px-s mx-1" src="assets/images/delete_white_icon.svg" alt=""></span>
+                                            <span class="text-white fs_12px-s ml-1"><img class="w_20px-s mx-1 text-white" src="assets/images/view_icon.svg" alt=""></span>
+                                        </div>
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -411,8 +494,8 @@
                         </form>
                         <div class="row py-3">
                             <div class="col-12 d-flex justify-content-center">
-                                <button type="button" class="btn bg_grey-s br_10px-s fg_green-s py-3 px-5 mr-md-2 w-100"><strong>CANCEL</strong></button>
-                                <button type="submit" class="btn bg_green-s br_10px-s py-3 text-white px-5 ml-2 w-100"><strong>UPLOAD</strong></button>
+                                <button type="button" class="btn bg_grey-s br_10px-s fg_green-s py-3 px-5 mr-md-2 w-100" data-dismiss="modal"><strong>CANCEL</strong></button>
+                                <button type="submit" class="btn bg_green-s br_10px-s py-3 text-white px-5 ml-2 w-100" data-dismiss="modal"><strong>UPLOAD</strong></button>
                             </div>
                         </div>
                     </div>
