--- a/edit_profile.html
+++ b/edit_profile.html
@@ -45,7 +45,7 @@
                         <a href="javasccript:void(0)" role="button" class="" data-toggle="dropdown">
                             <img src="assets/images/notification.svg" class="ml-3 img-fluid nav_notification_img" alt="navbar_home" />
                         </a>
-                        <div class="col-4 dropdown-menu mt_68px-s bg_lightgrey-s border-0 shadow br_15px-s min_w_315px-s ml-xl-5">
+                        <div class="col-4 dropdown-menu mt_68px-s border-0 shadow br_15px-s min_w_315px-s ml-xl-5">
                             <h4 class="ml-5 mt-3 mb-5">
                                 <strong class="fg_green-s">Notification</strong>
                             </h4>
@@ -53,7 +53,7 @@
                             <h5 class="ml-5">
                                 <strong>Today</strong>
                             </h5>
-                            <a class="dropdown-item bg-white py-4" href="#">
+                            <a class="dropdown-item bg_lightgrey-s py-4" href="#">
                                 <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
                                     <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
                                     <strong class="fg_green-s ml-2">Themer</strong> <span> invite you to join the game.</span>
@@ -63,7 +63,7 @@
 
                             <hr class="goalkeeper_margin_b mx-1 mt-0 mb-0" />
 
-                            <a class="dropdown-item bg-white py-4" href="#">
+                            <a class="dropdown-item bg_lightgrey-s py-4" href="#">
                                 <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
                                     <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
                                     <strong class="fg_green-s ml-2">Themer</strong> <span> accepted your invitation.</span>
