--- a/game_invitation.html
+++ b/game_invitation.html
@@ -63,7 +63,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="game_invitation.html">
+                                    <a class="nav-link" href="#">
                                         <span> <img src="assets/images/GameInvitation.svg" class="img-fluid" alt="navbar_home" /> </span> Game Invitations
                                     </a>
                                 </li>
@@ -88,7 +88,7 @@
                             <a href="javasccript:void(0)" role="button" class="" data-toggle="dropdown">
                                 <img src="assets/images/notification.svg" class="ml-3 img-fluid nav_notification_img" alt="navbar_home" />
                             </a>
-                            <div class="col-4 dropdown-menu bg_lightgrey-s border-0 shadow br_15px-s min_w_315px-s ml-xl-5">
+                            <div class="col-4 dropdown-menu border-0 shadow br_15px-s min_w_315px-s ml-xl-5">
                                 <h4 class="ml-5 mt-3 mb-5">
                                     <strong class="fg_green-s">Notification</strong>
                                 </h4>
@@ -96,7 +96,7 @@
                                 <h5 class="ml-5">
                                     <strong>Today</strong>
                                 </h5>
-                                <a class="dropdown-item bg-white py-4" href="#">
+                                <a class="dropdown-item bg_lightgrey-s py-4" href="#">
                                     <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
                                         <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
                                         <strong class="fg_green-s ml-2">Themer</strong> <span> invite you to join the game.</span>
@@ -106,7 +106,7 @@
 
                                 <hr class="goalkeeper_margin_b mt-0 mb-0" />
 
-                                <a class="dropdown-item bg-white py-4" href="#">
+                                <a class="dropdown-item bg_lightgrey-s py-4" href="#">
                                     <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
                                         <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
                                         <strong class="fg_green-s ml-2">Themer</strong> <span> accepted your invitation.</span>
@@ -155,7 +155,7 @@
                     <h1>
                         <Strong>Game Invitations</Strong>
                     </h1>
-                    <h4>Send or accept game Invitations.</h4>
+                    <h4>Send or accept game invitations.</h4>
                 </div>
                 <div class="col-md-7 col-12 justify-content-md-end mt-md-0 mt-4 d-flex align-self-center">
                     <a href="javascript:void(0)" role="button" class="btn bg-white br_10px-s mr-2 br_green_on_hover_active-s fs_18px-s active fg_light_grey-s py-3 outline_none-s w_h_216px_x_63px-s"><strong>Invitations</strong></a>
@@ -744,7 +744,7 @@
     <script src="assets/js/common.js"></script>
     <script src="assets/js/main.js"></script>
     <!-- <script src="assets/js/main.js"></script> -->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         var config = `
         function selectDate(date) {
           $('#calendar-wrapper').updateCalendarOptions({
@@ -775,7 +775,7 @@
                 eval(code);
             } catch (e) {}
         });
-    </script>
+    </script> -->
 
 </body>
 
