--- a/home-sent-invitation.html
+++ b/home-sent-invitation.html
@@ -41,9 +41,9 @@
                             <h4 class="pr-2 text-dark">Home</h4>
                         </a>
                         <h4 class="px-2"><strong>/</strong></h4>
-                        <h4 class="fg_green-s pl-2">Sent Invitations</h4>
+                        <h4 class="fg_green-s fs_sm_21px-s pl-2">Sent Invitations</h4>
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-md-4 col-10 pt-2 text-right order-md-2 order-1">
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-12 pt-2 text-right order-md-2 order-1">
                         <div class="">
                             <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
                             <span class="text-dark"> <strong>Adailiya </strong> </span>
@@ -55,7 +55,7 @@
                             <a href="javasccript:void(0)" role="button" class="" data-toggle="dropdown">
                                 <img src="assets/images/notification.svg" class="ml-3 img-fluid nav_notification_img" alt="navbar_home" />
                             </a>
-                            <div class="col-4 dropdown-menu mt_68px-s bg_lightgrey-s border-0 shadow br_15px-s min_w_315px-s ml-xl-5">
+                            <div class="col-4 dropdown-menu mt_68px-s border-0 shadow br_15px-s min_w_315px-s ml-xl-5">
                                 <h4 class="ml-5 mt-3 mb-5">
                                     <strong class="fg_green-s">Notification</strong>
                                 </h4>
@@ -63,7 +63,7 @@
                                 <h5 class="ml-5">
                                     <strong>Today</strong>
                                 </h5>
-                                <a class="dropdown-item bg-white py-4" href="#">
+                                <a class="dropdown-item bg_lightgrey-s py-4" href="#">
                                     <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
                                         <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
                                         <strong class="fg_green-s ml-2">Themer</strong> <span> invite you to join the game.</span>
@@ -73,7 +73,7 @@
 
                                 <hr class="goalkeeper_margin_b mx-1 mt-0 mb-0" />
 
-                                <a class="dropdown-item bg-white py-4" href="#">
+                                <a class="dropdown-item bg_lightgrey-s py-4" href="#">
                                     <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
                                         <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
                                         <strong class="fg_green-s ml-2">Themer</strong> <span> accepted your invitation.</span>
@@ -130,7 +130,7 @@
                                                 <div class="col-lg-3 col-md-3 col-3 pl-0">
                                                     <img src="assets/images/Group 24.png" alt="" />
                                                 </div>
-                                                <div class="col-lg-9 col-md-9 col-9 pl-0">
+                                                <div class="col-lg-9 col-md-9 col-9 pl-md-0">
                                                     <div class="text-white">
                                                         <h6 class="mb-0">Thamer</h6>
                                                         <span class=" opacity_4-s fs_12px-s">@thamermd</span>
@@ -145,38 +145,38 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="row mx-auto pt-3">
-                                                <div class="col-3 text-white text-center px-0 fs_12px-s">
+                                            <div class="row pt-3">
+                                                <div class="col-3 text-white text-center px-md-2 px-0 fs_10px-s">
                                                     <span class="opacity_4-s">Age(years)</span>
                                                     <br>
-                                                    <span class="fs_12px-s">28</span>
+                                                    <span class="fs_10px-s">28</span>
                                                 </div>
-                                                <div class="col-3 text-white text-center px-0 fs_12px-s">
+                                                <div class="col-3 text-white text-center px-md-3 px-0 fs_10px-s">
                                                     <span class="opacity_4-s">Matches</span>
                                                     <br>
-                                                    <span class="fs_12px-s">15</span>
+                                                    <span class="fs_10px-s">15</span>
                                                 </div>
-                                                <div class="col-3 text-white text-center px-0 fs_12px-s">
+                                                <div class="col-3 text-white text-center px-md-3 px-0 fs_10px-s">
                                                     <span class="opacity_4-s">Missed</span>
                                                     <br>
-                                                    <span class="fs_12px-s">2</span>
+                                                    <span class="fs_10px-s">2</span>
                                                 </div>
-                                                <div class="col-3 text-white text-center px-0 fs_12px-s">
+                                                <div class="col-3 text-white text-center px-md-3 px-0 fs_10px-s">
                                                     <span class="opacity_4-s">Missed</span>
                                                     <br>
-                                                    <span class="fs_12px-s">Defender</span>
+                                                    <span class="fs_10px-s">Defender</span>
                                                 </div>
                                             </div>
                                             <hr class="goalkeeper_margin_b mx-1" />
 
                                             <div class="row mx-auto aditya_location">
                                                 <div class="col-6">
-                                                    <p class="fs_12px-s mb-0">
+                                                    <p class="fs_11px-s mb-0">
                                                         <i class=" fa fa-map-marker" aria-hidden="true"></i> Aditya
                                                     </p>
                                                 </div>
-                                                <div class="col-6 pl-0">
-                                                    <a class="td_none-s text-white fs_12px-s" href="home-sent-invitation.html">
+                                                <div class="col-6 px-0">
+                                                    <a class="td_none-s text-white fs_11px-s" href="home-sent-invitation.html">
                                                         <span class="pull-right text-white"> send invitation >> </span>
                                                     </a>
                                                 </div>
@@ -210,15 +210,15 @@
                                 <div class="col-12 mt-4 ">
                                     <div class="d-flex justify-content-between  bg_grey-s br_10px-s p-3">
                                         <div class="text-center">
-                                            <span class="opacity_4-s fs_14px-s">Subtotal</span>
+                                            <span class="opacity_4-s fs_14px-s fs_sm_10px_invitation-s">Subtotal</span>
                                             <h5><strong><span>$</span>10</strong></h5>
                                         </div>
                                         <div class="text-center">
-                                            <span class="opacity_4-s fs_14px-s">Invitation Fees</span>
+                                            <span class="opacity_4-s fs_14px-s fs_sm_10px_invitation-s">Invitation Fees</span>
                                             <h5><strong>25%</strong></h5>
                                         </div>
                                         <div class="text-center">
-                                            <span class="opacity_4-s fs_14px-s">Total Amount</span>
+                                            <span class="opacity_4-s fs_14px-s fs_sm_10px_invitation-s">Total Amount</span>
                                             <h5><strong><span>$</span>12.5</strong></h5>
                                         </div>
                                     </div>
@@ -333,7 +333,7 @@
                                 </div>
                                 <div class="col-12 px-4 bg_lightgrey-s br_15px-s mt-4 ">
                                     <div class="d-flex justify-content-between pt-4">
-                                        <span class="fs_14px-s"><strong>Select Time</strong></span>
+                                        <span class="fs_14px-s fs_sm_10px_invitation-s"><strong>Select Time</strong></span>
                                         <div>
                                             <span class="text-white bg_green-s fs_12px-s py-2 rounded-pill px-4">PM</span>
                                             <span class=" fg_green-s bg_grey-s fs_12px-s py-2 rounded-pill px-4">AM</span>
@@ -371,8 +371,8 @@
                                             <div class="col-md-4 col-6">
                                                 <img src="assets/images/Mask Group 3.svg" class="stadium_img mt-1" alt="" />
                                             </div>
-                                            <div class="col-md-8 col-6 pl-xl-4 pl-2 pl-md-3 my-3">
-                                                <span class="fs_12px-s fg_green-s">Jaber Al-Ahmad INternational Stadium</span>
+                                            <div class="col-md-8 col-6 pl-xl-4 pl-2 pl-md-3 mb-3">
+                                                <span class="fs_10px-s fg_green-s">Jaber Al-Ahmad INternational Stadium</span>
                                                 <div class="fs_9px-s pt-1">
                                                     <img src="assets/images/Location.svg" class="img-fluid" alt="">
                                                     <span>Sami Ahmad Al Munayes St, Al kuyawt, Kuwait.</span>
