--- a/chat.html
+++ b/chat.html
@@ -967,6 +967,7 @@
                             </div>
                             <!-- chat input - start -->
                             <div class="input-group word-break word-wrap mt-4 py-2  shadow br_10px-s">
+                                <span class="input-group-text bg-white border-0 br_right_10px-s opacity_4-s ml-2"><img class="" src="assets/images/chat_upload_icon.png" width="18" alt=""></span>
                                 <textarea type="textarea" name="message" placeholder="Type your message....." class="form-control py-2 textarea_h_w-s br_left_10px-s ft_size_14px-s border-0" id="simple-chat-message"></textarea>
                                 <!-- <a class="" href="javascript:void(0)"><img src="assets/images/chat_send_icon.svg" alt=""></a> -->
                                 <span class="input-group-text bg-white border-0 br_right_10px-s"><img class="" src="assets/images/chat_send_icon.svg" alt=""></span>
