--- a/favorite-sent-invitation.html
+++ b/favorite-sent-invitation.html
@@ -371,13 +371,13 @@
                                             <div class="col-md-4 col-6">
                                                 <img src="assets/images/Mask Group 3.svg" class="stadium_img mt-1" alt="" />
                                             </div>
-                                            <div class="col-md-8 col-6 pl-xl-4 pl-2 pl-md-3 mb-3">
-                                                <span class="fs_10px-s fg_green-s">Jaber Al-Ahmad INternational Stadium</span>
-                                                <div class="fs_9px-s pt-1">
+                                            <div class="col-md-8 col-6 pl-xl-4 pl-0 pl-md-3 mb-3 mb-md-2">
+                                                <span class="fs_14px-s ft_size_on_small-screen-s fg_green-s">Jaber Al-Ahmad INternational Stadium</span>
+                                                <div class="fs_12px-s  mt-lg-3 pt-1 ft_size_location_text_on_small-screen-s">
                                                     <img src="assets/images/Location.svg" class="img-fluid" alt="">
                                                     <span>Sami Ahmad Al Munayes St, Al kuyawt, Kuwait.</span>
                                                 </div>
-                                                <button class="btn fg_green-s w_90-s bg_grey-s mt-2 fs_10px-s">SELECT</button>
+                                                <button class="btn fg_green-s w_90-s bg_grey-s mt-3 mt-lg-4 fs_10px-s">SELECT</button>
                                             </div>
                                         </div>
                                     </div>
