--- a/game_invitation.html
+++ b/game_invitation.html
@@ -171,7 +171,9 @@
                 <div class="col-12 d-flex fg_green-s">
                     <h6 class="mb-0 fs_18px-s"><strong>Today,</strong></h6>&nbsp;
                     <h6 class="mb-0 fs_18px-s"><strong>26 December 2020</strong></h6>
-                    <a href="javascript:void(0)" class="td_none-s d-flex align-self-center mx-2 "><img src="assets/images/arrow_green.svg" class="img-fluid change_img-d" width="10" alt="arrow button"></a>
+                    <a href="javascript:void(0)" class="td_none-s d-flex align-self-center mx-2">
+                        <img src="assets/images/arrow_down_green.svg" class="change_img-d fg_green-s" width="17" alt="arrow button">
+                    </a>
                 </div>
                 <div class="col-12 d-none mb-4 mt-3" id="toggle_calendar-d">
                     <main>
