--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
                                                     </p>
                                                 </div>
                                                 <div class="col-6 px-md-3 px-0">
-                                                    <a class="td_none-s fs_11px-s" href="Home/home-sent-invitation.html">
+                                                    <a class="td_none-s fs_11px-s" href="home-sent-invitation.html">
                                                         <span class="pull-right text-dark  fs_11px-s"><strong>send invitation >></strong></span>
                                                     </a>
                                                 </div>
