--- a/more.html
+++ b/more.html
@@ -458,14 +458,14 @@
             <div class="modal-content br_10px-s border-0">
                 <div class="container-fluid">
                     <!--modal header-->
-                    <div class="row pt-4 modal-header border-0">
+                    <div class="row pt-5 mt-3 modal-header border-0">
                         <div class="col-12 text-center">
                             <img src="assets/images/success.svg" width="160" alt="success">
                         </div>
                     </div>
                     <!--modal header end-->
-                    <div class="row modal-body justify-content-center pt-2 pb-0">
-                        <div class="col-12">
+                    <div class="row modal-body justify-content-center pt-4 pb-0">
+                        <div class="col-12 mt-4">
                             <div class="col-12 text-center">
                                 <h4 class="fg_green-s">VERIFIED!</h4>
                                 <h5>Your phone number has been updated successfully</h5>
@@ -473,7 +473,7 @@
                         </div>
                     </div>
 
-                    <div class="row pt-4 pb-4 px-2">
+                    <div class="row pt-5 my-4 pb-4 px-2">
                         <!--OK button-->
                         <div class="col-12 ">
                             <a href="more.html">
@@ -671,14 +671,14 @@
             <div class="modal-content br_10px-s border-0">
                 <div class="container-fluid">
                     <!--modal header-->
-                    <div class="row pt-4 modal-header border-0">
+                    <div class="row pt-5 mt-3 modal-header border-0">
                         <div class="col-12 text-center">
                             <img src="assets/images/success.svg" width="160" alt="success">
                         </div>
                     </div>
                     <!--modal header end-->
-                    <div class="row modal-body justify-content-center pt-2 pb-0">
-                        <div class="col-12">
+                    <div class="row modal-body justify-content-center pt-4 pb-0">
+                        <div class="col-12 mt-4">
                             <div class="col-12 text-center">
                                 <h4 class="fg_green-s">VERIFIED!</h4>
                                 <h5>Your email has been updated successfully</h5>
@@ -686,7 +686,7 @@
                         </div>
                     </div>
 
-                    <div class="row pt-4 pb-4 px-2">
+                    <div class="row pt-5 my-4 pb-4 px-2">
                         <!--OK button-->
                         <div class="col-12 ">
                             <a href="more.html">
@@ -882,14 +882,14 @@
             <div class="modal-content br_10px-s border-0">
                 <div class="container-fluid">
                     <!--modal header-->
-                    <div class="row pt-4 modal-header border-0">
+                    <div class="row pt-5 mt-3 modal-header border-0">
                         <div class="col-12 text-center">
                             <img src="assets/images/success.svg" width="160" alt="success">
                         </div>
                     </div>
                     <!--modal header end-->
-                    <div class="row modal-body justify-content-center pt-2 pb-0">
-                        <div class="col-12">
+                    <div class="row modal-body justify-content-center pt-4 pb-0">
+                        <div class="col-12 mt-4">
                             <div class="col-12 text-center">
                                 <h4 class="fg_green-s">VERIFIED!</h4>
                                 <h5>Your password has been updated successfully</h5>
@@ -897,7 +897,7 @@
                         </div>
                     </div>
 
-                    <div class="row pt-4 pb-4 px-2">
+                    <div class="row pt-5 my-4 pb-4 px-2">
                         <!--OK button-->
                         <div class="col-12 ">
                             <a href="more.html">
