--- a/hire_Players.html
+++ b/hire_Players.html
@@ -169,7 +169,7 @@
                 <div class="col-12 d-flex fg_green-s">
                     <h6 class="mb-0 fs_18px-s"><strong>Today,</strong></h6>&nbsp;
                     <h6 class="mb-0 fs_18px-s"><strong>26 December 2020</strong></h6>
-                    <a href="javascript:void(0)" class="td_none-s d-flex align-self-center mx-2"><img src="assets/images/arrow_green.svg" class="img-fluid change_img-d" width="10" alt="arrow button"></a>
+                    <a href="javascript:void(0)" class="td_none-s d-flex align-self-center mx-2"><img src="assets/images/arrow_down_green.svg" class="img-fluid change_img-d" width="17" alt="arrow button"></a>
                 </div>
                 <div class="col-12 d-none mb-4 mt-3" id="toggle_calendar-d">
                     <main>
@@ -482,7 +482,7 @@
     <script src="https://unpkg.com/codeflask/build/codeflask.min.js"></script>
     <script src="assets/js/main.js"></script>
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         var config = `
         function selectDate(date) {
           $('#calendar-wrapper').updateCalendarOptions({
@@ -513,7 +513,7 @@
                 eval(code);
             } catch (e) {}
         });
-    </script>
+    </script> -->
 </body>
 
 </html>
