chat update fixes

--- a/home-sent-invitation.html
+++ b/home-sent-invitation.html
@@ -25,15 +25,6 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/ui.css" />
     <title>Sent Invitation</title>
-    <style>
-        .year-label {
-            font-size: 21px !important;
-        }
-        
-        .month-label {
-            font-size: 21px !important;
-        }
-    </style>
 
 </head>
 
@@ -63,11 +54,11 @@
                                 <img src="assets/images/notification.svg" class="ml-3 img-fluid nav_notification_img" alt="navbar_home" />
                             </a>
                             <div class="col-4 dropdown-menu mt_68px-s border-0 shadow br_15px-s min_w_315px-s ml-xl-5">
-                                <h4 class="ml-5 mt-3 mb-5">
+                                <h4 class="ml-5 mt-3 mb-3">
                                     <strong class="fg_green-s">Notification</strong>
                                 </h4>
 
-                                <h5 class="ml-5">
+                                <h5 class="ml-5 float-left">
                                     <strong>Today</strong>
                                 </h5>
                                 <a class="dropdown-item bg_lightgrey-s py-4" href="#">
@@ -94,7 +85,7 @@
                                         </br><span class="ml-5">2m ago</span>
                                     </div>
                                 </a>
-                                <h5 class="ml-5">
+                                <h5 class="ml-5 float-left">
                                     <strong>Yesterday</strong>
                                 </h5>
                                 <a class="dropdown-item py-4" href="#">
@@ -239,7 +230,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 col-12 mt-3">
                         <div class="container">
                             <div class="row">
-                                <div class=" col-12 celender_bg">
+                                <div class=" col-12 px-0 celender_bg">
 
                                     <div id="" class="">
                                         <div class="calendar"></div>
