--- a/user_profile.html
+++ b/user_profile.html
@@ -458,7 +458,7 @@
 
     <!-- Modal  -->
 
-    <!-- upload image modal  -->
+    <!-- upload file modal  -->
     <!-- Modal -->
     <div class="modal fade" id="upload_img_modal-d" tabindex="-1" aria-labelledby="view-head" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered ">
