--- a/chat.html
+++ b/chat.html
@@ -176,7 +176,7 @@
                     <div class="row chat_module_parent">
 
                         <!-- ----- chat member list - start ----- -->
-                        <div class=" col-xl-4 col-lg-4 col-md-12 col-12 chat_member_list_container-d border-0 h_580px-s">
+                        <div class=" col-xl-4 col-lg-4 col-md-12 col-12 chat_member_list_container-d d-lg-block border-0 h_580px-s">
 
                             <div class="row">
                                 <div class="col-12 ml-xl-2 mt-xl-2 mb-xl-2">
@@ -185,7 +185,7 @@
                             </div>
 
                             <div class="row d-flex list_member_parent-d justify-content-center">
-                                <div class="col-10 col-lg-11 br_10px-s my-2  br_on_hover-s chat_parent" data-parent-chat='chat_1'>
+                                <div class="col-10 col-lg-11 br_10px-s my-2 br_on_active-s br_on_hover-s chat_parent" data-parent-chat='chat_1'>
                                     <div class="row border br_10px-s py-1 bg-greenish_grey-s">
                                         <div class="col-3 col-md-3 col-lg-3 col-xl-3 align-self-center pl-lg-2 pl-xl-3 pl-1 pl-md-5">
                                             <div class="profile_img-s">
@@ -462,13 +462,18 @@
                         <!-- ----- chat member list - end ----- -->
 
                         <!-- ----- chat room - start ----- -->
-                        <div class="d-none col-12 col-md-12 col-lg-8 mt-4 mt-md-0 col-xl-8 border border-top-0 w-100 chat" id='chat_1'>
+                        <div class="d-none d-lg-block col-12 col-md-12 col-lg-8 mt-4 mt-md-0 col-xl-8 border border-top-0 w-100 chat" id='chat_1'>
 
                             <!-- profile detail of next person in chat - start -->
                             <div class="row">
                                 <div class="col-12 border-bottom">
                                     <div class="row">
                                         <div class="col-10 d-flex">
+                                            <div class="align-self-center mr-3">
+                                                <a href="" class="chat_back_to_list-d">
+                                                    <img src="assets/images/back_arrow.svg" width="18" alt="" />
+                                                </a>
+                                            </div>
                                             <div class="profile_img-s d-flex justify-content-between">
                                                 <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
                                             </div>
@@ -533,7 +538,7 @@
                                             </div>
                                         </div>
                                         <div class="col-xl-8 col-lg-8 col-md-8 col-8 mx-5 px-0">
-                                            <span class="ft_11px-s"> 12:43 PM</span>
+                                            <span class="ft_11px-s"> 12:43 PM | <span class="fg_green-s">S</span></span>
                                         </div>
                                     </div>
                                     <!-- next person in chat -->
@@ -552,7 +557,7 @@
                                         </div>
 
                                         <div class="col-12 mr-xl-5 mr-lg-5 text-right">
-                                            <span class="ft_11px-s"> 12:43 AM</span>
+                                            <span class="ft_11px-s"> 12:43 AM | <span class="fg_green-s">R</span></span>
                                         </div>
                                     </div>
                                     <!-- first person in chat -->
@@ -591,7 +596,7 @@
                                             </div>
                                         </div>
                                         <div class="col-xl-8 col-lg-8 col-md-8 col-8 mx-5 px-0">
-                                            <span class="ft_11px-s"> 12:43 PM</span>
+                                            <span class="ft_11px-s"> 12:43 PM | <span class="fg_green-s">S</span></span>
                                         </div>
                                     </div>
                                     <!-- next person in chat -->
@@ -616,7 +621,7 @@
                                         </div>
 
                                         <div class="col-12 mr-xl-5 mr-lg-5 text-right">
-                                            <span class="ft_11px-s"> 12:43 PM</span>
+                                            <span class="ft_11px-s"> 12:43 PM | <span class="fg_green-s">R</span></span>
                                         </div>
                                     </div>
                                     <!-- first person in chat -->
@@ -625,7 +630,10 @@
                             </div>
                             <!-- chat input - start -->
                             <div class="input-group word-break word-wrap mt-4 py-2  shadow br_10px-s">
-                                <textarea type="textarea" name="message" placeholder="Type your message....." class="form-control py-2 textarea_h_w-s br_left_10px-s ft_size_14px-s border-0" id="simple-chat-message"></textarea>
+                                <span class="input-group-text bg-white border-0 br_right_10px-s opacity_4-s ml-2">
+                                    <a href="" role="button" data-toggle="modal" data-target="#upload_img_modal-d"> <img class="" src="assets/images/file.svg" width="18" alt=""></a>
+                                </span>
+                                <textarea type="textarea" name="message" placeholder="Type your message....." class="form-control mt-2 py-2 textarea_h_w-s br_left_10px-s ft_size_14px-s border-0" id="simple-chat-message"></textarea>
                                 <!-- <a class="" href="javascript:void(0)"><img src="assets/images/chat_send_icon.svg" alt=""></a> -->
                                 <span class="input-group-text bg-white border-0 br_right_10px-s"><img class="" src="assets/images/chat_send_icon.svg" alt=""></span>
                             </div>
@@ -640,6 +648,11 @@
                                 <div class="col-12 border-bottom">
                                     <div class="row">
                                         <div class="col-10 d-flex">
+                                            <div class="align-self-center mr-3">
+                                                <a href="" class="chat_back_to_list-d">
+                                                    <img src="assets/images/back_arrow.svg" width="18" alt="" />
+                                                </a>
+                                            </div>
                                             <div class="profile_img-s d-flex justify-content-between">
                                                 <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
                                             </div>
@@ -704,7 +717,7 @@
                                             </div>
                                         </div>
                                         <div class="col-xl-8 col-lg-8 col-md-8 col-8 mx-5 px-0">
-                                            <span class="ft_11px-s"> 12:43 PM</span>
+                                            <span class="ft_11px-s"> 12:43 PM | <span class="fg_green-s">R</span></span>
                                         </div>
                                     </div>
                                     <!-- next person in chat -->
@@ -723,7 +736,7 @@
                                         </div>
 
                                         <div class="col-12 mr-xl-5 mr-lg-5 text-right">
-                                            <span class="ft_11px-s"> 12:43 AM</span>
+                                            <span class="ft_11px-s"> 12:43 AM | <span class="fg_green-s">R</span></span>
                                         </div>
                                     </div>
                                     <!-- first person in chat -->
@@ -762,7 +775,7 @@
                                             </div>
                                         </div>
                                         <div class="col-xl-8 col-lg-8 col-md-8 col-8 mx-5 px-0">
-                                            <span class="ft_11px-s"> 12:43 PM</span>
+                                            <span class="ft_11px-s"> 12:43 PM | <span class="fg_green-s">R</span></span>
                                         </div>
                                     </div>
                                     <!-- next person in chat -->
@@ -787,7 +800,7 @@
                                         </div>
 
                                         <div class="col-12 mr-xl-5 mr-lg-5 text-right">
-                                            <span class="ft_11px-s"> 12:43 PM</span>
+                                            <span class="ft_11px-s"> 12:43 PM | <span class="fg_green-s">R</span></span>
                                         </div>
                                     </div>
                                     <!-- first person in chat -->
@@ -796,7 +809,9 @@
                             </div>
                             <!-- chat input - start -->
                             <div class="input-group word-break word-wrap mt-4 py-2  shadow br_10px-s">
-                                <textarea type="textarea" name="message" placeholder="Type your message....." class="form-control py-2 textarea_h_w-s br_left_10px-s ft_size_14px-s border-0" id="simple-chat-message"></textarea>
+                                <span class="input-group-text bg-white border-0 br_right_10px-s opacity_4-s ml-2">
+                                    <a href="" role="button" data-toggle="modal" data-target="#upload_img_modal-d"> <img class="" src="assets/images/file.svg" width="18" alt=""></a>
+                                </span> <textarea type="textarea" name="message" placeholder="Type your message....." class="form-control mt-2 py-2 textarea_h_w-s br_left_10px-s ft_size_14px-s border-0" id="simple-chat-message"></textarea>
                                 <!-- <a class="" href="javascript:void(0)"><img src="assets/images/chat_send_icon.svg" alt=""></a> -->
                                 <span class="input-group-text bg-white border-0 br_right_10px-s"><img class="" src="assets/images/chat_send_icon.svg" alt=""></span>
                             </div>
@@ -811,6 +826,11 @@
                                 <div class="col-12 border-bottom">
                                     <div class="row">
                                         <div class="col-10 d-flex">
+                                            <div class="align-self-center mr-3">
+                                                <a href="" class="chat_back_to_list-d" id="">
+                                                    <img src="assets/images/back_arrow.svg" width="18" alt="" />
+                                                </a>
+                                            </div>
                                             <div class="profile_img-s d-flex justify-content-between">
                                                 <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
                                             </div>
@@ -875,7 +895,7 @@
                                             </div>
                                         </div>
                                         <div class="col-xl-8 col-lg-8 col-md-8 col-8 mx-5 px-0">
-                                            <span class="ft_11px-s"> 12:43 PM</span>
+                                            <span class="ft_11px-s"> 12:43 PM | <span class="fg_green-s">R</span></span>
                                         </div>
                                     </div>
                                     <!-- next person in chat -->
@@ -894,7 +914,7 @@
                                         </div>
 
                                         <div class="col-12 mr-xl-5 mr-lg-5 text-right">
-                                            <span class="ft_11px-s"> 12:43 AM</span>
+                                            <span class="ft_11px-s"> 12:43 AM | <span class="fg_green-s">R</span></span>
                                         </div>
                                     </div>
                                     <!-- first person in chat -->
@@ -933,7 +953,7 @@
                                             </div>
                                         </div>
                                         <div class="col-xl-8 col-lg-8 col-md-8 col-8 mx-5 px-0">
-                                            <span class="ft_11px-s"> 12:43 PM</span>
+                                            <span class="ft_11px-s"> 12:43 PM | <span class="fg_green-s">S</span></span>
                                         </div>
                                     </div>
                                     <!-- next person in chat -->
@@ -958,7 +978,7 @@
                                         </div>
 
                                         <div class="col-12 mr-xl-5 mr-lg-5 text-right">
-                                            <span class="ft_11px-s"> 12:43 PM</span>
+                                            <span class="ft_11px-s"> 12:43 PM | <span class="fg_green-s">R</span></span>
                                         </div>
                                     </div>
                                     <!-- first person in chat -->
@@ -967,8 +987,9 @@
                             </div>
                             <!-- chat input - start -->
                             <div class="input-group word-break word-wrap mt-4 py-2  shadow br_10px-s">
-                                <span class="input-group-text bg-white border-0 br_right_10px-s opacity_4-s ml-2"><img class="" src="assets/images/chat_upload_icon.png" width="18" alt=""></span>
-                                <textarea type="textarea" name="message" placeholder="Type your message....." class="form-control py-2 textarea_h_w-s br_left_10px-s ft_size_14px-s border-0" id="simple-chat-message"></textarea>
+                                <span class="input-group-text bg-white border-0 br_right_10px-s opacity_4-s ml-2">
+                                    <a href="" role="button" data-toggle="modal" data-target="#upload_img_modal-d"> <img class="" src="assets/images/file.svg" width="18" alt=""></a>
+                                </span> <textarea type="textarea" name="message" placeholder="Type your message....." class="form-control mt-2 py-2 textarea_h_w-s br_left_10px-s ft_size_14px-s border-0" id="simple-chat-message"></textarea>
                                 <!-- <a class="" href="javascript:void(0)"><img src="assets/images/chat_send_icon.svg" alt=""></a> -->
                                 <span class="input-group-text bg-white border-0 br_right_10px-s"><img class="" src="assets/images/chat_send_icon.svg" alt=""></span>
                             </div>
@@ -987,6 +1008,52 @@
         <!-- container for chat - end -->
     </div>
     <!-- .................Home Page End ......................... -->
+
+    <!-- upload file modal  -->
+    <!-- Modal -->
+    <div class="modal fade" id="upload_img_modal-d" tabindex="-1" aria-labelledby="view-head" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered ">
+            <div class="modal-content br_10px-s border-0">
+                <div class="modal-header bg_grey-s border-0 br_up_left_right_10px-s">
+                    <h5 class="modal-title px-3  text-dark" id="view-head"><strong>Upload</strong></h5>
+                </div>
+                <div class="container-fluid">
+                    <div class="modal-body">
+
+                        <form action="">
+                            <div class="row pb-3">
+                                <div class="col-12">
+                                    <div class="form-group">
+                                        <label for="caption-d"><Strong>CAPTION</Strong></label>
+                                        <textarea class="form-control resize_none-s rounded" id="caption-d" placeholder="write here" rows="1"></textarea>
+                                    </div>
+                                </div>
+                                <div class="col-12 mt-3">
+                                    <h6><strong>PHOTO/VIDEO</strong></h6>
+                                    <div class="w-100 ">
+                                        <img src="assets/images/upload_img.svg" class="w_inherit-s" alt="upload img">
+                                    </div>
+                                </div>
+                                <div class="col-12 mt-4">
+                                    <img src="assets/images/close.svg" class="remove_img-s position-absolute" alt="remove img">
+                                    <div class="">
+                                        <img src="assets/images/picture.jpg" class="upload_pic-s" alt="uplaod img">
+                                    </div>
+                                </div>
+                            </div>
+
+                        </form>
+                        <div class="row py-3">
+                            <div class="col-12 d-flex justify-content-center">
+                                <button type="button" class="btn bg_grey-s br_10px-s fg_green-s py-3 px-5 mr-md-2 w-100" data-dismiss="modal"><strong>CANCEL</strong></button>
+                                <button type="submit" class="btn bg_green-s br_10px-s py-3 text-white px-5 ml-2 w-100" data-dismiss="modal"><strong>UPLOAD</strong></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="assets/js/main.js"></script>
