--- a/rating_player.html
+++ b/rating_player.html
@@ -222,18 +222,6 @@
                                     </div>
                                     <!--shoots rating end-->
 
-                                    <!--appearance rating-->
-                                    <div class="col-md-6 col-12 mt-2">
-                                        <div class="d-flex justify-content-between">
-                                            <h6><strong>APPEARANCE</strong></h6>
-                                            <h6 class="appearance-d">0</h6>
-                                        </div>
-                                        <div class="form-group rating_filed-s br_8px-s bg-white border">
-                                            <input type="range" min="0.0" max="5.0" value="0" step="0.1" class="form-control-range py-4 ratig_slider-s mx-auto slider-d" id="" data-parent="appearance-d">
-                                        </div>
-                                    </div>
-                                    <!--appearance rating end-->
-
                                     <!--pace rating-->
                                     <div class="col-md-6 col-12 mt-2">
                                         <div class="d-flex justify-content-between">
@@ -245,6 +233,11 @@
                                         </div>
                                     </div>
                                     <!--pace rating end-->
+
+                                    <!--extra coloumn to set submit button-->
+                                    <div class="col-md-6 col-12 mt-2">
+                                        <!-- coloumn for space  -->
+                                    </div>
                                     <div class="col-md-6 col-12 mt-2 align-self-center">
                                         <button type="submit" class="br_10px-s bg_green-s text-white w-100 h_58px-s fs_20px-s border-0" data-toggle="modal" data-target="#player_played_modal-d"><strong>SUBMIT</strong></button>
                                     </div>
