--- a/chat.html
+++ b/chat.html
@@ -633,7 +633,7 @@
                                 <span class="input-group-text bg-white border-0 br_right_10px-s opacity_4-s ml-2">
                                     <a href="" role="button" data-toggle="modal" data-target="#upload_img_modal-d"> <img class="" src="assets/images/file.svg" width="18" alt=""></a>
                                 </span>
-                                <textarea type="textarea" name="message" placeholder="Type your message....." class="form-control mt-2 py-2 textarea_h_w-s br_left_10px-s ft_size_14px-s border-0" id="simple-chat-message"></textarea>
+                                <textarea type="textarea" name="message" placeholder="Type your message....." class="form-control textarea_h_w-s br_left_10px-s ft_17px-s border-0" id="simple-chat-message"></textarea>
                                 <!-- <a class="" href="javascript:void(0)"><img src="assets/images/chat_send_icon.svg" alt=""></a> -->
                                 <span class="input-group-text bg-white border-0 br_right_10px-s"><img class="" src="assets/images/chat_send_icon.svg" alt=""></span>
                             </div>
@@ -811,7 +811,7 @@
                             <div class="input-group word-break word-wrap mt-4 py-2  shadow br_10px-s">
                                 <span class="input-group-text bg-white border-0 br_right_10px-s opacity_4-s ml-2">
                                     <a href="" role="button" data-toggle="modal" data-target="#upload_img_modal-d"> <img class="" src="assets/images/file.svg" width="18" alt=""></a>
-                                </span> <textarea type="textarea" name="message" placeholder="Type your message....." class="form-control mt-2 py-2 textarea_h_w-s br_left_10px-s ft_size_14px-s border-0" id="simple-chat-message"></textarea>
+                                </span> <textarea type="textarea" name="message" placeholder="Type your message....." class="form-control textarea_h_w-s br_left_10px-s ft_17px-s border-0" id="simple-chat-message"></textarea>
                                 <!-- <a class="" href="javascript:void(0)"><img src="assets/images/chat_send_icon.svg" alt=""></a> -->
                                 <span class="input-group-text bg-white border-0 br_right_10px-s"><img class="" src="assets/images/chat_send_icon.svg" alt=""></span>
                             </div>
@@ -989,7 +989,7 @@
                             <div class="input-group word-break word-wrap mt-4 py-2  shadow br_10px-s">
                                 <span class="input-group-text bg-white border-0 br_right_10px-s opacity_4-s ml-2">
                                     <a href="" role="button" data-toggle="modal" data-target="#upload_img_modal-d"> <img class="" src="assets/images/file.svg" width="18" alt=""></a>
-                                </span> <textarea type="textarea" name="message" placeholder="Type your message....." class="form-control mt-2 py-2 textarea_h_w-s br_left_10px-s ft_size_14px-s border-0" id="simple-chat-message"></textarea>
+                                </span> <textarea type="textarea" name="message" placeholder="Type your message....." class="form-control textarea_h_w-s br_left_10px-s ft_17px-s border-0" id="simple-chat-message"></textarea>
                                 <!-- <a class="" href="javascript:void(0)"><img src="assets/images/chat_send_icon.svg" alt=""></a> -->
                                 <span class="input-group-text bg-white border-0 br_right_10px-s"><img class="" src="assets/images/chat_send_icon.svg" alt=""></span>
                             </div>
